.k8s/ingress/loan-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: jailtonjunior.net
      http:
        paths:
          - pathType: Prefix
            path: /loans
            backend:
              service:
                name: loan-api-service
                port:
                  number: 80
